
 + Issue #1, add a test suite.

 + Add a searchMatching() client method.

 + Add the getIcatUrl() call introduced with IDS 1.4.0.

** Incompatible changes

 + The Lucene calls that have been removed in ICAT 4.5.0 are also
   removed from the client.

** Bug fixes and minor changes

 + Issue #6: Query: adding a condition on a meta attribute fails.

 + Ignore import errors from the backend modules in icatingest.py and
   icatdump.py.  This means one can use the scripts also if the
   prerequisites for some backends are not fulfilled, only the
   concerned backends are not available then.

 + Issue #5, compatibility with ICAT 4.5: entity ids are not
   guaranteed to be unique among all entities, but only for entities
   of the same type.

 + Issue #5, compatibility with ICAT 4.5: getEntityInfo() also lists
   "createId", "createTime", "modId", and "modTime" as attributes.
   This need to be taken into account in module icat.icatcheck.

 + The last fix in 0.8.0 on the string representation operator
     str  () of Query was not complete, the operator still had
   unwanted side effects.

 + Fix a bug in the handling of errors raised from the ICAT or the
   IDS server.  This bug affected only Python 3.

 + Source repository moved to Git.  This gives rise to a few tiny
   changes.  To name the most visible ones: python2_6.patch is now
   auto generated by comparing two source branches and must be applied
   with '-p1' instead of '-p0', the format of the icat module variable
   __revision__ has changed.

* Version 0.8.0 (2015-05-08)

** New features

 + Enable verification of the SSL server certificate in HTTPS
   connections.  Add a new configuration variable "checkCert" to
   control this.  It is set to True by default.

   Note that this requires either Python 2.7.9 or 3.2 or newer.  With
   older Python version, this configuration option has no effect.

 + Add type conversion of configuration variables.
